# 3-python-package-exercise-team-ponyo-squared

./: .gitignore  .pypirc  Pipfile  README.md  Steps.md  alex.txt  alex1.txt  alex2.txt  instructions.md  pyproject.toml  setup.py  steps.md  test_printAll.txt  test_saveTo.txt  test_trackerprint.txt
.circleci/: config.yml
.github/workflows/: build.yaml  python-package.yml
package/: example_program.py  main.py  pyproject.toml  test_printAll.txt  test_saveTo.txt
package/package_main/: __init__.py  main.py
package/tests/: _test.py
