[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runtimeponyo"
description = "A pacakge that allows the user to record and print out neatly the runtime of function and also the entire program."
version = "0.0.3"
authors = [
  { name="Aaron Stein" },
  { name="Alex Hmitti" },
  { name="Rafael Nadal-Scala" },
  { name="Jhon Kim"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "runtime", "profiling"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Repository" = "https://github.com/software-students-fall2023/3-python-package-exercise-team-ponyo-squared/tree/main"